--- a/404.html
+++ b/404.html
@@ -1,13 +1,30 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-  <link rel="stylesheet" type="text/css" href="https://qzone.qq.com/gy/404/style/404style.css">
-</head>
+
 <body>
-  <script type="text/plain"
-          charset="utf-8" homePageUrl="/"
-          homePageName="Rustam's Blog">
-  </script>
+  <h1>You have Lost, this is page 404. Go back to <a href="https://rusyasoft.github.io"> rusyasoft.github.io </a> </h1>
   
+  <h2> Experiment with WebRTC </h2>
+  <video autoplay></video>
+
+        <script>
+            navigator.getUserMedia = navigator.getUserMedia
+             || navigator.webkitGetUserMedia 
+             || navigator.mozGetUserMedia;
+             
+             var constraints = {audio: true, video: true};
+             var videoArea = document.querySelector("video");
+
+             navigator.getUserMedia(constraints, onSuccess, onError);
+
+             function onSuccess(stream) {
+                 console.log("Success! We have a stream!");
+             }
+
+             function onError(error) {
+                 console.log("Error with getUserMedia: ", error);
+             }
+
+        </script>
 </body>
 </html>
