--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <body>
   <h1>You have Lost, this is page 404. Go back to <a href="https://rusyasoft.github.io"> rusyasoft.github.io </a> </h1>
   
-  <h2> Experiment with WebRTC </h2>
+  <h2> Experiment with WebRTC - 2 </h2>
   <div id="cameraSelector">
             Video: <select id="camera"></select>
         </div>
