--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
         <title>O'Reilly Introduction to WebRTC</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="https://rusyasoft.github.io/assets/css/styles.css">
         <script src="https://rusyasoft.github.io/assets/js/src/socket.io.js"></script>
     </head>
 
